# DistributedColony

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  colony_image.sh  colony_video.sh  download_stb.sh  kill_backend.sh  setup_mac.sh  tasks.txt
backend/: be_background_thread.cpp  be_background_thread.h  be_colony.cpp  be_colony.h  be_main.cpp  main.cpp
be_api/: be_api_common.h  colony.proto  ping.proto
frontend/: fo_api.cpp  fo_api.h  fo_main.cpp  main.cpp
shared/: image_saver.cpp  image_saver.h  utils.cpp  utils.h
